css/redactor.css
/* ... */
.redactor_box img::selection {
  background: transparent;
}
.redactor_box img::-moz-selection {
  background: transparent;
}
/*
	BOX
*/
.redactor_box {
  position: relative;
  overflow: visible;
  background: #fff;
}
.redactor_box iframe {
  display: block;
  margin: 0;
  padding: 0;
  border: 1px solid #eee;
}
.redactor_box textarea {
  position: relative;
  z-index: 1004;
  display: block;
  overflow: auto;
  margin: 0;
  padding: 0;
  width: 100%;
  outline: none;
  border: none;
  background-color: #222;
  box-shadow: none;
  color: #ccc;
  font-size: 13px;
  font-family: Menlo, Monaco, monospace, sans-serif;
  resize: none;
}
.redactor_box textarea:focus {
  outline: none;
}
/*
	AIR

*/
body .redactor_air {
  position: absolute;
  z-index: 102;
}
/*
	FULLSCREEN
*/
body .redactor_box_fullscreen {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 49000;
  overflow: hidden;
  width: 100%;
}
/*
	LINK TOOLTIP
*/
.redactor-link-tooltip {
  position: absolute;
  z-index: 49999;
  padding: 10px;
  line-height: 1;
  display: inline-block;
  background-color: #000;
  color: #555 !important;
}
.redactor-link-tooltip,
.redactor-link-tooltip a {
  font-size: 12px;
  font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif;
}
.redactor-link-tooltip a {
  color: #ccc;
  margin: 0 5px;
  text-decoration: none;
}
.redactor-link-tooltip a:hover {
  color: #fff;
}
/*
	IMAGE BOX
*/
#redactor-image-box img {
  width: 100%;
}
.redactor_editor {
  position: relative;
  margin: 0 !important;
  padding: 10px 20px;
  padding-bottom: 5px;
  outline: none;
  background: none;
  background: #fff;
  box-shadow: none !important;
  white-space: normal;
  border: 1px solid #eee;
}
.redactor_editor:focus {
  outline: none;
}
.redactor_editor div,
.redactor_editor p,
.redactor_editor ul,
.redactor_editor ol,
.redactor_editor table,
.redactor_editor dl,
.redactor_editor blockquote,
.redactor_editor pre,
.redactor_editor h1,
.redactor_editor h2,
.redactor_editor h3,
.redactor_editor h4,
.redactor_editor h5,
.redactor_editor h6 {
  font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif;
}
.redactor_editor code,
.redactor_editor pre {
  font-family: Menlo, Monaco, monospace, sans-serif;
}
.redactor_editor div,
.redactor_editor p,
.redactor_editor ul,
.redactor_editor ol,
.redactor_editor table,
.redactor_editor dl,
.redactor_editor blockquote,
.redactor_editor pre {
  font-size: 14px;
  line-height: 1.6em;
}
.redactor_editor a {
  color: #15c !important;
  text-decoration: underline !important;
}
.redactor_editor .redactor_placeholder {
  color: #999 !important;
  display: block !important;
}
/*
	TYPOGRAPHY
*/
.redactor_editor object,
.redactor_editor embed,
.redactor_editor video,
.redactor_editor img {
  max-width: 100%;
  width: auto;
}
.redactor_editor video,
.redactor_editor img {
  height: auto;
}
.redactor_editor div,
.redactor_editor p,
.redactor_editor ul,
.redactor_editor ol,
.redactor_editor table,
.redactor_editor dl,
.redactor_editor blockquote,
.redactor_editor pre {
  margin: 0;
  margin-bottom: 10px !important;
  border: none;
  background: none !important;
  box-shadow: none !important;
}
.redactor_editor iframe,
.redactor_editor object,
.redactor_editor hr {
  margin-bottom: 15px !important;
}
.redactor_editor blockquote {
  margin-left: 1.5em !important;
  padding-left: 0 !important;
  color: #777;
  font-style: italic !important;
}
.redactor_editor ul,
.redactor_editor ol {
  padding-left: 2em !important;
}
.redactor_editor ul ul,
.redactor_editor ol ol,
.redactor_editor ul ol,
.redactor_editor ol ul {
  margin: 2px !important;
  padding: 0 !important;
  padding-left: 2em !important;
  border: none;
}
.redactor_editor dl dt {
  font-weight: bold;
}
.redactor_editor dd {
  margin-left: 1em;
}
.redactor_editor table {
  border-collapse: collapse;
  font-size: 1em !important;
}
.redactor_editor table td {
  padding: 5px !important;
  border: 1px solid #ddd;
  vertical-align: top;
}
.redactor_editor table thead td {
  border-bottom: 2px solid #000 !important;
  font-weight: bold !important;
}
.redactor_editor code {
  background-color: #d8d7d7 !important;
}
.redactor_editor pre {
  overflow: auto;
  padding: 1em !important;
  border: 1px solid #ddd !important;
  border-radius: 3px !important;
  background: #f8f8f8 !important;
  white-space: pre;
  font-size: 90% !important;
}
.redactor_editor hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
}
/*
	HEADERS
*/
.redactor_editor h1,
.redactor_editor h2,
.redactor_editor h3,
.redactor_editor h4,
.redactor_editor h5,
.redactor_editor h6 {
  margin-top: 0 !important;
  padding: 0 !important;
  background: none;
  color: #000;
  font-weight: bold;
}
.redactor_editor h1 {
  font-size: 36px !important;
  line-height: 1.111em !important;
  margin-bottom: .15em !important;
}
.redactor_editor h2 {
  font-size: 30px !important;
  line-height: 1.111em !important;
  margin-bottom: .25em !important;
}
.redactor_editor h3 {
  font-size: 24px !important;
  line-height: 1.333em !important;
  margin-bottom: .2em !important;
}
.redactor_editor h4 {
  font-size: 18px !important;
  line-height: 1.5em !important;
  margin-bottom: .2em !important;
}
.redactor_editor h5 {
  font-size: 1em !important;
  line-height: 1.6em !important;
  margin-bottom: .25em !important;
}
.redactor_editor h6 {
  font-size: .8em !important;
  line-height: 1.6em !important;
  text-transform: uppercase;
  margin-bottom: .3em !important;
}
/*
	TOOLBAR
*/
.redactor_toolbar {
  position: relative;
  top: 0;
  left: 0;
  margin: 0 !important;
  padding: 0 !important;
  list-style: none !important;
  font-size: 14px !important;
  font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif;
  line-height: 1 !important;
  background: #fff;
  border: none;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
  z-index: 3;
}
.redactor_toolbar:after {
  content: "";
  display: table;
  clear: both;
}
/* ... */

